--- a/src/main/webapp/pages/ManageCompanies/ManageCompanies.html
+++ b/src/main/webapp/pages/ManageCompanies/ManageCompanies.html
@@ -1,10 +1,135 @@
-<wm-page data-ng-controller="ManageCompaniesPageController" pagetitle="Manage Companies"> 
-    <wm-header content="header"></wm-header> 
-    <wm-top-nav content="topnav"></wm-top-nav> 
-    <wm-content> 
-        <wm-left-panel columnwidth="2" content="leftnav"></wm-left-panel> 
-        <wm-page-content columnwidth="10"> 
-        </wm-page-content> 
-    </wm-content> 
-    <wm-footer content="footer"></wm-footer> 
+<wm-page data-ng-controller="ManageCompaniesPageController" pagetitle="Manage Companies" name="page1">
+    <wm-header content="header" name="header1"></wm-header>
+    <wm-top-nav content="topnav" name="top_nav1"></wm-top-nav>
+    <wm-content name="content1">
+        <wm-left-panel columnwidth="2" content="leftnav" name="left_panel1"></wm-left-panel>
+        <wm-page-content columnwidth="10" name="page_content1">
+            <wm-layoutgrid name="layoutgrid1">
+                <wm-gridrow name="gridrow1">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn1">
+                        <wm-breadcrumb dataset="bind:Variables.BreadCrumb.dataSet" name="breadcrumb1"></wm-breadcrumb>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow2">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn3">
+                        <wm-panel iconclass="wi wi-work" autoclose="outsideClick" name="panel1" title="All CX Companies" class="panel-primary">
+                            <wm-livegrid formlayout="dialog" name="livegrid1">
+                                <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.Cx2VendorData.dataSet" navigation="Classic" name="grid1" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
+                                    <wm-grid-column binding="id" caption="Id" type="integer" primary-key="true" generator="identity" readonly="true" show="true"></wm-grid-column>
+                                    <wm-grid-column binding="companyName" caption="Company" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="companyPhone" caption="Company Phone" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="companyEmail" caption="Email Address" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="companyWebsite" caption="Website" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="lastUpdated" caption="Last Updated" type="date" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                    <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
+                                    <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
+                                    <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
+                                </wm-grid>
+                                <wm-liveform novalidate="false" errormessage="" title="Vendor Details" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.Cx2VendorData.dataSet" captionalign="left" captionposition="top" name="liveform1">
+                                    <wm-layoutgrid columns="3" name="layoutgrid2">
+                                        <wm-gridrow name="gridrow3">
+                                            <wm-gridcolumn columnwidth="4" name="gridcolumn3_1">
+                                                <wm-form-field name="companyName" displayname="Company Name" show="true" primary-key="false" generator="assigned" key="companyName" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="4" name="gridcolumn4">
+                                                <wm-form-field name="address1" displayname="Address1" show="true" primary-key="false" generator="assigned" key="address1" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="4" name="gridcolumn5">
+                                                <wm-form-field name="address2" displayname="Address2" show="true" primary-key="false" generator="assigned" key="address2" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow4">
+                                            <wm-gridcolumn columnwidth="4" name="gridcolumn6">
+                                                <wm-form-field name="city" displayname="City" show="true" primary-key="false" generator="assigned" key="city" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="4" name="gridcolumn7">
+                                                <wm-form-field name="states" displayname="State" show="true" primary-key="false" generator="assigned" key="states" type="list" is-related="true" widget="select" placeholder="Select value" orderby="stateName:asc"
+                                                displayexpression="stateName"></wm-form-field>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="4" name="gridcolumn8">
+                                                <wm-form-field name="postalCode" displayname="Postal Code" show="true" primary-key="false" generator="assigned" key="postalCode" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow5">
+                                            <wm-gridcolumn columnwidth="4" name="gridcolumn9">
+                                                <wm-form-field name="country" displayname="Country" show="true" primary-key="false" generator="assigned" key="country" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="4" name="gridcolumn10">
+                                                <wm-form-field name="companyPhone" displayname="Company Phone" show="true" primary-key="false" generator="assigned" key="companyPhone" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="4" name="gridcolumn11">
+                                                <wm-form-field name="altPhone" displayname="Alternate Phone" show="true" primary-key="false" generator="assigned" key="altPhone" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow6">
+                                            <wm-gridcolumn columnwidth="4" name="gridcolumn12">
+                                                <wm-form-field name="faxNumber" displayname="Fax Number" show="true" primary-key="false" generator="assigned" key="faxNumber" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="4" name="gridcolumn13">
+                                                <wm-form-field name="companyEmail" displayname="Company Email" show="true" primary-key="false" generator="assigned" key="companyEmail" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="4" name="gridcolumn14">
+                                                <wm-form-field name="companyWebsite" displayname="Company Website" show="true" primary-key="false" generator="assigned" key="companyWebsite" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow7">
+                                            <wm-gridcolumn columnwidth="4" name="gridcolumn15">
+                                                <wm-form-field name="typeOfBusiness" displayname="Type of Business" show="true" primary-key="false" generator="assigned" key="typeOfBusiness" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="4" name="gridcolumn16">
+                                                <wm-form-field name="businessClassification" displayname="Business Classification" show="true" primary-key="false" generator="assigned" key="businessClassification" type="string" widget="text" maxchars="255"
+                                                inputtype="text" placeholder="Enter value"></wm-form-field>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="4" name="gridcolumn17">
+                                                <wm-form-field name="contractorTypes" displayname="Contractor Type" show="true" primary-key="false" generator="assigned" key="contractorTypes" type="list" is-related="true" widget="select" placeholder="Select value"
+                                                orderby="contractorType:asc" displayexpression="contractorType"></wm-form-field>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow8">
+                                            <wm-gridcolumn columnwidth="4" name="gridcolumn18">
+                                                <wm-form-field name="numberOfEmployees" displayname="Number of Employees" show="true" primary-key="false" generator="assigned" key="numberOfEmployees" type="integer" step="0" widget="number" inputtype="number"
+                                                placeholder="Enter value"></wm-form-field>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="4" name="gridcolumn19">
+                                                <wm-form-field name="stateRegNumber" displayname="State Registration Number" show="true" primary-key="false" generator="assigned" key="stateRegNumber" type="string" widget="text" maxchars="255" inputtype="text"
+                                                placeholder="Enter value"></wm-form-field>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="4" name="gridcolumn20">
+                                                <wm-form-field name="feinNumber" displayname="Employer Identification Number (EIN)" show="true" primary-key="false" generator="assigned" key="feinNumber" type="string" widget="text" maxchars="255" inputtype="text"
+                                                placeholder="Enter value"></wm-form-field>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow9">
+                                            <wm-gridcolumn columnwidth="4" name="gridcolumn21">
+                                                <wm-form-field name="insuranceCompany" displayname="Insurance Company" show="true" primary-key="false" generator="assigned" key="insuranceCompany" type="string" widget="text" maxchars="255" inputtype="text"
+                                                placeholder="Enter value"></wm-form-field>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="4" name="gridcolumn22">
+                                                <wm-form-field name="insuranceExpires" displayname="Insurance Expiration Date" show="true" primary-key="false" generator="assigned" key="insuranceExpires" type="date" widget="date" placeholder="Select date"
+                                                outputformat="yyyy-MM-dd" datepattern="MM-dd-yyyy"></wm-form-field>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="4" name="gridcolumn23">
+                                                <wm-form-field name="coi" displayname="Certificate of Insurance (COI)" show="true" primary-key="false" generator="assigned" key="coi" type="blob" widget="upload" maxchars="2147483647" permitted="undefined"></wm-form-field>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow10">
+                                            <wm-gridcolumn columnwidth="4" name="gridcolumn24">
+                                                <wm-form-field name="lastUpdated" displayname="Last Updated" show="true" primary-key="false" generator="assigned" key="lastUpdated" type="date" widget="date" placeholder="Select date" outputformat="yyyy-MM-dd"
+                                                datepattern="MM-dd-yyyy"></wm-form-field>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                    </wm-layoutgrid>
+                                    <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number"></wm-form-field>
+                                    <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
+                                    <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
+                                </wm-liveform>
+                            </wm-livegrid>
+                        </wm-panel>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
+        </wm-page-content>
+    </wm-content>
+    <wm-footer content="footer" name="footer1"></wm-footer>
 </wm-page>
