--- a/src/main/webapp/pages/ManageCompanies/ManageCompanies.html
+++ b/src/main/webapp/pages/ManageCompanies/ManageCompanies.html
@@ -26,11 +26,12 @@
                                     <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
                                     <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                                 </wm-grid>
-                                <wm-liveform novalidate="false" errormessage="" title="Vendor Details" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.Cx2VendorData.dataSet" captionalign="left" captionposition="top" name="liveform1">
+                                <wm-liveform novalidate="false" errormessage="" title="Vendor Details" formlayout="dialog" iconclass="wi wi-work" dataset="bind:Variables.Cx2VendorData.dataSet" captionalign="left" captionposition="top" name="liveform1">
                                     <wm-layoutgrid columns="3" name="layoutgrid2">
                                         <wm-gridrow name="gridrow3">
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn3_1">
-                                                <wm-form-field name="companyName" displayname="Company Name" show="true" primary-key="false" generator="assigned" key="companyName" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" required="true"></wm-form-field>
+                                                <wm-form-field name="companyName" displayname="Company Name" show="true" primary-key="false" generator="assigned" key="companyName" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
+                                                required="true"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn4">
                                                 <wm-form-field name="address1" displayname="Address1" show="true" primary-key="false" generator="assigned" key="address1" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
@@ -44,7 +45,8 @@
                                                 <wm-form-field name="city" displayname="City" show="true" primary-key="false" generator="assigned" key="city" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn7">
-                                                <wm-form-field name="states" displayname="State" show="true" primary-key="false" generator="assigned" key="states" type="list" is-related="true" widget="select" placeholder="Select value" displayexpression="stateName" orderby="stateName:asc"></wm-form-field>
+                                                <wm-form-field name="states" displayname="State" show="true" primary-key="false" generator="assigned" key="states" type="list" is-related="true" widget="select" placeholder="Select value" displayexpression="stateName"
+                                                orderby="stateName:asc"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn8">
                                                 <wm-form-field name="postalCode" displayname="Postal Code" show="true" primary-key="false" generator="assigned" key="postalCode" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
@@ -66,7 +68,8 @@
                                                 <wm-form-field name="faxNumber" displayname="Fax Number" show="true" primary-key="false" generator="assigned" key="faxNumber" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn13">
-                                                <wm-form-field name="companyEmail" displayname="Company Email" show="true" primary-key="false" generator="assigned" key="companyEmail" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" required="true"></wm-form-field>
+                                                <wm-form-field name="companyEmail" displayname="Company Email" show="true" primary-key="false" generator="assigned" key="companyEmail" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
+                                                required="true"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn14">
                                                 <wm-form-field name="companyWebsite" displayname="Company Website" show="true" primary-key="false" generator="assigned" key="companyWebsite" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
@@ -77,29 +80,36 @@
                                                 <wm-form-field name="typeOfBusiness" displayname="Type of Business" show="true" primary-key="false" generator="assigned" key="typeOfBusiness" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn16">
-                                                <wm-form-field name="businessClassification" displayname="Business Classification" show="true" primary-key="false" generator="assigned" key="businessClassification" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                                <wm-form-field name="businessClassification" displayname="Business Classification" show="true" primary-key="false" generator="assigned" key="businessClassification" type="string" widget="text" maxchars="255"
+                                                inputtype="text" placeholder="Enter value"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn17">
-                                                <wm-form-field name="contractorTypes" displayname="Contractor Type" show="true" primary-key="false" generator="assigned" key="contractorTypes" type="list" is-related="true" widget="select" placeholder="Select value" orderby="contractorType:asc" displayexpression="contractorType"></wm-form-field>
+                                                <wm-form-field name="contractorTypes" displayname="Contractor Type" show="true" primary-key="false" generator="assigned" key="contractorTypes" type="list" is-related="true" widget="select" placeholder="Select value"
+                                                orderby="contractorType:asc" displayexpression="contractorType"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow8">
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn18">
-                                                <wm-form-field name="numberOfEmployees" displayname="Number of Employees" show="true" primary-key="false" generator="assigned" key="numberOfEmployees" type="integer" step="0" widget="number" inputtype="number" placeholder="Enter value"></wm-form-field>
+                                                <wm-form-field name="numberOfEmployees" displayname="Number of Employees" show="true" primary-key="false" generator="assigned" key="numberOfEmployees" type="integer" step="0" widget="number" inputtype="number"
+                                                placeholder="Enter value"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn19">
-                                                <wm-form-field name="stateRegNumber" displayname="State Registration Number" show="true" primary-key="false" generator="assigned" key="stateRegNumber" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                                <wm-form-field name="stateRegNumber" displayname="State Registration Number" show="true" primary-key="false" generator="assigned" key="stateRegNumber" type="string" widget="text" maxchars="255" inputtype="text"
+                                                placeholder="Enter value"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn20">
-                                                <wm-form-field name="feinNumber" displayname="Employer Identification Number (EIN)" show="true" primary-key="false" generator="assigned" key="feinNumber" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                                <wm-form-field name="feinNumber" displayname="Employer Identification Number (EIN)" show="true" primary-key="false" generator="assigned" key="feinNumber" type="string" widget="text" maxchars="255" inputtype="text"
+                                                placeholder="Enter value"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow9">
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn21">
-                                                <wm-form-field name="insuranceCompany" displayname="Insurance Company" show="true" primary-key="false" generator="assigned" key="insuranceCompany" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                                <wm-form-field name="insuranceCompany" displayname="Insurance Company" show="true" primary-key="false" generator="assigned" key="insuranceCompany" type="string" widget="text" maxchars="255" inputtype="text"
+                                                placeholder="Enter value"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn22">
-                                                <wm-form-field name="insuranceExpires" displayname="Insurance Expiration Date" show="true" primary-key="false" generator="assigned" key="insuranceExpires" type="date" widget="date" datepattern="MM-dd-yyyy" placeholder="Select date" outputformat="yyyy-MM-dd"></wm-form-field>
+                                                <wm-form-field name="insuranceExpires" displayname="Insurance Expiration Date" show="true" primary-key="false" generator="assigned" key="insuranceExpires" type="date" widget="date" datepattern="MM-dd-yyyy" placeholder="Select date"
+                                                outputformat="yyyy-MM-dd"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn23">
                                                 <wm-form-field name="coi" displayname="Certificate of Insurance (COI)" show="true" primary-key="false" generator="assigned" key="coi" type="blob" widget="upload" maxchars="2147483647" permitted="undefined"></wm-form-field>
@@ -107,7 +117,8 @@
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow10">
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn24">
-                                                <wm-form-field name="lastUpdated" displayname="Last Updated" show="true" primary-key="false" generator="assigned" key="lastUpdated" type="date" widget="date" datepattern="MM-dd-yyyy" placeholder="Select date" outputformat="yyyy-MM-dd" defaultvalue="CURRENT_DATE"></wm-form-field>
+                                                <wm-form-field name="lastUpdated" displayname="Last Updated" show="true" primary-key="false" generator="assigned" key="lastUpdated" type="date" widget="date" datepattern="MM-dd-yyyy" placeholder="Select date"
+                                                outputformat="yyyy-MM-dd" defaultvalue="CURRENT_DATE"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                     </wm-layoutgrid>
